--- a/index.html
+++ b/index.html
@@ -143,5 +143,5 @@
 <h2>Contact Us</h2>
 <p>If you have any questions about this Privacy Policy, You can contact us:</p>
 <ul>
-<li>By email: <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="01687260696660666041666c60686d2f626e6c">[email&#160;protected]</a></li>
+<li>By email: isahgaga@gmail.com</li>
 </ul><script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
